<resources>
    <string name="app_name">University Gone Wrong!</string>
    <string name="title">University Gone Wrong!</string>
    <string name="author">Harry Spencer-Whitcombe (UP2052662)</string>
    <string name="copyright">© 2022 Top Hat Studios</string>
    <string name="version">v1.0 (Alpha)</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="about_page_body">Derived from the 1960s Georges Perec story, The Art of Asking Your Boss for a Raise, University Gone Wrong! follows the story of a student trying to survive university whilst everything around them is going wrong. Pick your path and go on an exciting adventure, but be careful, not all is as it seems...</string>
</resources>